<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_staff">Staff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">221623114699507</string>
    <string name="sign_in">Sign in</string>
    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="create"><u>No account yet? Create one</u></string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account"><u>Already have an account? Sign in here!</u></string>
    <string name="sign_up_facebook">Sign up with Facebook</string>
    <string name="sign_up_google">Sign up with Google</string>
    <!--    string for I agree to the Terms of Service and Privacy Policy-->
    <string name="agree">
        I agree to the <u>Terms of Service</u> and <u>Privacy Policy</u>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="department">Department</string>
    <string name="staff">Staff</string>
    <!--    //for got password underline-->
    <string name="forgot_password"><u>Forgot Your Password?</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_text">Enter your email address and we will send you a link to reset your password.</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="reset_password_success">Reset password email sent successfully</string>
    <string name="reset_password_failed">Failed to send reset email</string>
    <string name="reset_password_failed_email">Email not found</string>
    <string name="reset_password_failed_email_invalid">Invalid email</string>
    <string name="reset_password_failed_email_empty">Email cannot be empty</string>
    <string name="reset_password_failed_email_not_verified">Email not verified</string>
    <string name="reset_password_failed_email_not_verified_message">Please verify your email first</string>
    <string name="reset_password_failed_email_not_verified_resend">Resend verification email</string>
    <string name="reset_password_failed_email_not_verified_resend_success">Verification email sent successfully</string>
    <string name="reset_password_failed_email_not_verified_resend_failed">Failed to send verification email</string>
    <string name="reset_password_failed_email_not_verified_resend_failed_message">Please try again later</string>

</resources>