<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_staff"
        android:name="com.example.myapplication.ui.staff.StaffFragment"
        android:label="@string/title_staff"
        tools:layout="@layout/fragment_staff" />
    <fragment
        android:id="@+id/navigation_department"
        android:name="com.example.myapplication.ui.department.DepartmentFragment"
        android:label="@string/department"
        tools:layout="@layout/fragment_department" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>