<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggg"
   >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:src="@drawable/fpt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign up for FPT Software"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:gravity="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input_layout"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:startIconDrawable="@drawable/user"
                android:textColorHint="@color/iron">

                <EditText
                    android:id="@+id/username_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_300"
                    android:layout_marginBottom="16dp"
                    android:hint="Username"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:background="@drawable/edittext_underline"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_signup_text_input_layout"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:startIconDrawable="@drawable/email"
                android:textColorHint="@color/iron">

                <EditText
                    android:id="@+id/email_signup_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_300"
                    android:layout_marginBottom="16dp"
                    android:hint="Email"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edittext_underline"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_signup_text_input_layout"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:startIconDrawable="@drawable/lock"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/iron">

                <EditText
                    android:id="@+id/password_signup_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_300"
                    android:layout_marginBottom="16dp"
                    android:hint="Password"
                    android:contentDescription="Password field"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:background="@drawable/edittext_underline"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_again_signup_text_input_layout"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:startIconDrawable="@drawable/lock"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/iron">

                <EditText
                    android:id="@+id/password_again_signup_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_300"
                    android:layout_marginBottom="16dp"
                    android:hint="Password again"
                    android:contentDescription="Password again field"
                    android:background="@drawable/edittext_underline"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkbox_signup_terms_and_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/agree"
                    android:textColor="#DA185A"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/custom_signup_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:tag="custom_login_button"
                android:layout_margin="16dp"
                android:text="Sign Up"
                android:drawableLeft="@drawable/enter"
                android:drawablePadding="15dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/button_shape" />
            />

            <TextView
                android:id="@+id/custom_signin_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:text="@string/already_have_account" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/grey_400"/>
                <TextView
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:text="or"
                    android:textColor="@color/grey_400"/>
                <View
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/grey_400"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:gravity="center|top">

                <Button
                    android:id="@+id/facebook_signup_button"
                    android:layout_width="250dp"
                    android:textStyle="bold"
                    android:paddingLeft="3dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/facebook"
                    android:tag="facebook_login_button"
                    android:text="@string/sign_up_facebook"
                    android:textColor="#000000"
                    android:background="@drawable/fb_gg"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:layout_marginBottom="5dp"/>
                />

                <Button
                    android:id="@+id/google_signup_button"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="250dp"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textSize="17dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/google"
                    android:tag="google_login_button"
                    android:text="@string/sign_up_google"
                    android:textColor="#000000"
                    android:background="@drawable/gg" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>
</ScrollView>